[tool.poetry]
name = "tartine"
version = "0.1.0"
description = "Create dynamic spreadsheets using Python"
authors = ["MaxHalford <maxhalford25@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
